fix twitter overlap, swap one header image

--- a/css/style.less
+++ b/css/style.less
@@ -1304,7 +1304,6 @@ footer.entry-meta {
 .twtr-widget, .twtr-doc {
   width: 100%!important;
   margin-top: -20px;
-  margin-bottom: -20px;
 }
 
 .twtr-hd, .twtr-ft {
